fix the alignment

--- a/src/app/about/AboutUs.css
+++ b/src/app/about/AboutUs.css
@@ -427,6 +427,7 @@ footer {
 @media (max-width: 768px) {
   .about-container {
      padding: 130px 20px;
+     margin-top:70px
   }
 
 
