--- a/src/app/services/Services.css
+++ b/src/app/services/Services.css
@@ -10,7 +10,7 @@
   bottom: 100px;
   z-index: 1;
   padding: 0px 60px;
-  background-color: linear-gradient(90deg, #1c0c3f 0%, #0f0f2f 100%);
+ background-color: linear-gradient(90deg, #1c0c3f 0%, #0f0f2f 100%);
   /* width: 100%; */
   /* margin: auto; */
   /* background: linear-gradient(90deg, #1c0c3f 0%, #0f0f2f 100%); */
@@ -25,6 +25,9 @@
 .services-logo1 {
   margin-left: 100px;
   /* margin-bottom: 10px; */
+  margin-top:-60px;
+  position:absolute;
+  z-index: 1;
 }
 
 
@@ -439,6 +442,7 @@
 
   .services-container{
     flex-direction: column;
+    margin-top: 70px;
     min-height: 90vh;
   }
   .services-left h1 {
